@startuml
hide methods

class Company{
-designation
}

class Parameter{
-designation
}

class ParameterCategory{
-code
-description
-nhsid
}

class Administrator

Company "1" -- "*" Parameter : capable of \n analysing >
Company "1" -- "*" ParameterCategory : adopts  >
Company "1" -- "*" Administrator :Knows >

Parameter "*" -- "1" ParameterCategory : presented under >

ParameterCategory "*" -- "1" Administrator : created by >

@enduml